[package]
name = "rload"
version = "0.1.0"
edition = "2021"

[features]
default = [ "full" ]
full = [ "h1", "h2", "tls", "timeout", "latency" ]
h1 = [ "dep:httparse" ]
h2 = [ "dep:h2" ]
tls = [ "dep:rustls", "dep:tokio-rustls" ]
timeout = []
latency = [ "dep:hdrhistogram" ]

[dependencies]
h2 = { version = "0.4.7", features = ["stream"], optional = true }
httparse = { version = "1.9.5", optional = true }
tokio-rustls = { version = "0.26.1", optional = true }
rustls = { version = "0.23.19", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }

anyhow = "1.0.94"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive", "env"] }
http = "1.2.0"
human_bytes = { version = "0.4.3", default-features = false }
near-safe-cell = "0.1.5"
num_cpus = "1.16.0"
pin-project = "1.1.7"
regex_static = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
cfg-if = "1.0.0"
tokio-util = "0.7.13"
numfmt = "1.1.1"
shadow-rs = { version = "0.36.0", features = ["cargo_metadata", "document-features", "metadata"] }

[build-dependencies]
shadow-rs = { version = "0.36.0", features = ["cargo_metadata", "document-features", "metadata"] }
