[package]
name = "rload"
version = "0.1.0"
edition = "2021"

default-run = "rload"

[features]
default = [ "full" ]
full = [ "h1", "h2", "tls", "timeout", "latency", "error-detail", "status-detail", "monoio" ]
h1 = [ "dep:httparse" ]
h2 = [ "dep:h2" ]
tls = [ "dep:rustls", "dep:tokio-rustls" ]
error-detail = []
status-detail = []
timeout = [ "dep:pingora-timeout" ]
latency = [ "dep:hdrhistogram" ]
monoio = [ "dep:monoio" ]

[dependencies]
h2 = { version = "0.4.7", features = ["stream"], optional = true }
httparse = { version = "1.9.5", optional = true }
tokio-rustls = { version = "0.26.1", optional = true }
rustls = { version = "0.23.19", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }
pingora-timeout = { version = "0.4.0", optional = true }
monoio = { version = "0.2.4", features = ["sync"], optional = true }

anyhow = "1.0.94"
bytes = "1.9.0"
clap = { version = "4.5.23", features = [ "derive", "env" ] }
http = "1.2.0"
human_bytes = { version = "0.4.3", default-features = false }
near-safe-cell = "0.1.5"
pin-project = "1.1.7"
regex_static = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
cfg-if = "1.0.0"
numfmt = "1.1.1"
shadow-rs = { version = "0.36.0", features = ["cargo_metadata", "document-features", "metadata"] }
monoio-rustls = "0.4.0"
monoio-http = "0.3.12"
signalfut = "0.1.0"

[build-dependencies]
shadow-rs = { version = "0.36.0", features = ["cargo_metadata", "document-features", "metadata"] }
