[package]
name = "rload"
version = "0.1.0"
edition = "2021"

default-run = "rload"

[features]
# all this features showed practically no performance degradation being enabled
default = [ "full" ]
full = [ "h1", "h2", "tls", "timeout", "latency", "error-detail", "status-detail", "mimalloc" ]
h1 = [ "dep:httparse" ]
h2 = [ "dep:h2" ]
tls = [ "dep:rustls", "dep:tokio-rustls" ]
error-detail = []
status-detail = []
timeout = [ "dep:pingora-timeout" ]
latency = [ "dep:hdrhistogram" ]
# monoio runtime showed no performance benefit over tokio (note that we are using a single-thread tokio runtime per core) 
monoio = [ "dep:monoio", "dep:monoio-rustls", "dep:monoio-http", "dep:signalfut" ]
mimalloc = [ "dep:mimalloc" ]
jemalloc = [ "dep:tikv-jemallocator" ]

[dependencies]
h2 = { version = "0.4.11", features = ["stream"], optional = true }
httparse = { version = "1.10.1", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
rustls = { version = "0.23.28", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }
pingora-timeout = { version = "0.5.0", optional = true }
monoio = { version = "0.2.4", features = [ "sync" ], optional = true }
monoio-rustls = { version = "0.4.0", optional = true }
monoio-http = { version = "0.3.12", optional = true }
signalfut = { version = "0.1.1", optional = true }

anyhow = "1.0.98"
bytes = "1.10.1"
clap = { version = "4.5.40", features = [ "derive", "env" ] }
http = "1.3.1"
human_bytes = { version = "0.4.3", default-features = false }
near-safe-cell = "0.1.5"
pin-project = "1.1.10"
regex_static = "0.1.1"
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"
cfg-if = "1.0.1"
numfmt = "1.1.1"
shadow-rs = { version = "0.36.0", features = ["cargo_metadata", "document-features", "metadata"] }
strum = { version = "0.27.1", features = ["derive"] }
static_assertions = "1.1.0"
tikv-jemallocator = { version = "0.6.0", optional = true } 
mimalloc = { version = "0.1.47", optional = true }

[build-dependencies]
shadow-rs = { version = "0.36.0", features = ["cargo_metadata", "document-features", "metadata"] }
